Tue Aug 21 04:09:06 2007  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm2_case.rb: add a new benchmark.
	  YARV optimize case/when syntax.  If every conditions
	  are literal (such as Symbol, Fixnum, String), dispatch
	  calc order will be O(1).

Tue Aug 21 04:08:07 2007  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_enumerator.rb: fix last commit.

Tue Aug 21 03:59:32 2007  Koichi Sasada  <ko1@atdot.net>

	* test_enumerator.rb (enum_test): fix to return sorted
	  array (for Hash test).

Tue Aug 21 03:55:20 2007  Koichi Sasada  <ko1@atdot.net>

	* enumerator.c (next_i): fix to return with Fiber#yield at
	  the end of each block.  [ruby-dev:31470]

	* enumerator.c (enumerator_next_p): call init_next if not
	  initialized.  [ruby-dev:31514]

	* test/ruby/test_enumerator.rb: add tests for Enumerator.

Mon Aug 20 23:28:39 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (Init_String): remove Symbol.intern and Symbol#dump.
	  [ruby-dev:31525]

	* dir.c (dir_foreach): return Enumerator if no block given.
	  [ruby-dev:31525]

	* io.c (rb_io_s_foreach): argument count check before making
	  Enumerator.  [ruby-dev:31525]

Mon Aug 20 23:17:14 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (struct rb_thread_struct): removed first_func_arg and
	  reuse first_args instead.

Sun Aug 19 13:31:40 2007  Tanaka Akira  <akr@fsij.org>

	* gc.c: use VALGRIND_MAKE_MEM_UNDEFINED to detect use of collected
	  objects if valgrind is available.  It cannot detect first 2 words
	  because they are used as the free list.

Sun Aug 19 13:13:52 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each/NODE_RESBODY): fix to add
	  additional nop to prevent tailcall optimization.

	* vm_opts.h: clean up comments.

Sun Aug 19 12:58:39 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_call_bmethod): fix to propagate information
	  that this proc is "from Method".  [ruby-dev:31490]

	* proc.c (method_proc, rb_mod_define_method): ditto.
