@@ -1,3 +1,10 @@
+Tue Aug 21 13:43:49 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* st.c (struct st_table_entry): add new members, fore and back, to
+	  iterate in inserted order.
+
+	* include/ruby/st.h (struct st_table): ditto.
+
 Tue Aug 21 04:09:06 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* benchmark/bm_vm2_case.rb: add a new benchmark.
